# PersonalityLinMulT

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: fi_OOWFR_LinMulT.yaml  fi_OOWFR_LinMulT_tw.yaml  fi_OOWFR_MulT.yaml  fi_OOWFR_MulT_tw.yaml  fi_db_config.yaml  fi_train_config.yaml  fi_train_config_v1.yaml  mosei_OOWFR_LinMulT.yaml  mosei_OOWFR_MulT.yaml  mosei_config.yaml  mosei_train_config.yaml  mosi_config.yaml  mosi_train_config.yaml
config/FI/: dataloader_OOWFR.yaml  model_OOB_LinMulT.yaml  model_OOWFR_LinMulT.yaml  model_OOWFR_MulT.yaml  model_WFR_LinMulT.yaml
config/MOSEI/: dataloader_OOB.yaml  model_OOWFR_MulT.yaml  model_WFR_LinMulT.yaml
config/MOSI/: dataloader_WFR.yaml  model_OOWFR_LinMulT.yaml  train.yaml
config/experiment_computational_complexity/: OOB_LinMulT.yaml  OOB_MulT.yaml  OOWFR_LinMulT.yaml  OOWFR_MulT.yaml  fi_LinMulT_config.yaml  fi_MulT_config.yaml  train_config.yaml
experiments/: prior.py  significance_test.py
experiments/FI/: run_mult_tw.sh
experiments/computational_complexity/: exp_plots.py  flops_gpu.py  inference_gpu.py
personalitylinmult/: __init__.py
personalitylinmult/computational_complexity/: utils.py
personalitylinmult/experiments/: fi_bootstrap_paired_ttest_against-proposed.py  fi_bootstrap_paired_ttest_feature-wise.py  mosei_bootstrap_paired_ttest_against_proposed.py  mosei_bootstrap_paired_ttest_feature-wise.py  performance_table.py  significance_table.py
personalitylinmult/models/: __init__.py
personalitylinmult/train/: callbacks.py  fi.py  history.py  lr_scheduler.py  metrics.py  mosi.py  (+10 more)
(+236 files in other folders)
