[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personalitylinmult"
version = "2.1.4"
description = "PersonalityLinMulT: Transformer-based Big Five Automatic Personality Perception."
keywords = ["bigfive", "personality", "app", "multimodal", "transformer", "linear-complexity attention"]
authors = [
  { name = "fodorad", email = "foauaai@inf.elte.hu" },
]
readme = {"file" = "README.md", "content-type" = "text/markdown"}
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Documentation = "https://github.com/fodorad/personalitylinmult#readme"
Issues = "https://github.com/fodorad/personalitylinmult/issues"
Source = "https://github.com/fodorad/personalitylinmult"

[tool.hatch.build.targets.wheel]
packages = ["personalitylinmult"]
exclude = ["personalitylinmult/test", "personalitylinmult/train", "data/"]

[tool.hatch.build.targets.sdist]
packages = ["personalitylinmult"]
exclude = ["personalitylinmult/test", "personalitylinmult/train", "data/"]

dependencies=[
  "numpy",
  "torch",
  "lightning",
  "linmult==1.5.2",
]

[project.optional-dependencies]
train = [
  "lightning==2.4.0",
  "matplotlib==3.9.2",
  "opencv-python==4.10.0.84",
  "pandas==2.2.3",
  "exordium[video]",
  "torch==2.5.1",
  "torchaudio==2.5.1",
  "torchvision==0.20.1",
  "tqdm==4.66.5",
  "linmult==1.5.1",
  "prettytable",
]